# capstone-ML-project

./: .gitignore  pyproject.toml
src/capstone_project/: data_handler.py  pipeline_runner.py  pipline_creator.py
