[tool.poetry]
name = "capstone_ml_project_u_mitskevich"
version = "0.1.0"
description = "\"\""
authors = ["Uladzislau Mitskevich"]
license = "\"MIT\""

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
